<resources>
    <string name="app_name" translatable="false">Randomshot</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="russian_roulette">Russian roulette</string>
    <string name="zero" translatable="false">0</string>
    <string name="length">Length</string>
    <string name="controller">Controller</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="cheers">Cheers!</string>
    <string name="shotController" translatable="false">ShotController</string>
    <string name="radius" translatable="false">Radius</string>
    <string name="speed">Speed</string>
</resources>
