<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_roulette"
            android:icon="@drawable/gun"
            android:title="@string/russian_roulette" />
        <item
            android:id="@+id/nav_controller"
            android:icon="@drawable/gamepad"
            android:title="@string/controller" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/about" />
    </group>

</menu>
